// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonBlock renders with default styles 1`] = `
.c0 {
  height: 1.25rem;
  border-radius: 6px;
  -webkit-animation: hlvHYO 1.5s infinite;
  animation: hlvHYO 1.5s infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.2,0,0.38,0.9);
  animation-timing-function: cubic-bezier(0.2,0,0.38,0.9);
}

<div
  class="c0"
  data-id="SKELETON_BLOCK"
  data-test-id="SKELETON_BLOCK"
/>
`;

exports[`SkeletonCircle renders with default value 1`] = `
.c0 {
  height: 1.25rem;
  min-height: 1.25rem;
  width: 1.25rem;
  min-width: 1.25rem;
  border-radius: 50%;
  -webkit-animation: hlvHYO 1.5s infinite;
  animation: hlvHYO 1.5s infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.2,0,0.38,0.9);
  animation-timing-function: cubic-bezier(0.2,0,0.38,0.9);
}

<div
  class="c0"
  data-id="SKELETON_CIRCLE"
  data-test-id="SKELETON_CIRCLE"
/>
`;
